src/styles/style.module.scss
/* stylelint-disable scss/no-global-function-names */
@use 'sass:math';
@import 'null';
@import 'mixins/mixins';

$maxWidthContainer: 1080;
$maxWidth: 1920;

html {
  &._pc {
    margin: 0px calc(-1 * (100vw - 100%)) 0px 0px;
    overflow-x: hidden;
  }
}

body {
  font-family: sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  color: #fff;
  background: var(--theme-default-bgimage);
  background-color: #10100e;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 0 0;
  background-size: cover;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.app_wrapper {
  max-width: 1230px;
  padding: 0 15px;
  margin: 0 auto;
}

// TITLE
.top {
  &:not(:last-child) {
    @include adaptiv-value('margin-bottom', 30, 15, 1);
  }
}
.title {
  font-weight: 700;
  line-height: 1.7;
  color: var(--theme-default-header);
  text-shadow: 0px 0px 2px #000;
  letter-spacing: 1.5px;
  transition: color 0.3s ease 0s;
  @include adaptiv-value('font-size', 26, 22, 1);
}

// HEADER
.header {
  @include adaptiv-value('height', 120, 70, 1);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px 0;
}
.logo {
  flex-grow: 0;
  flex-shrink: 0;
  margin: 0px 35px 0px 0px;
  @include adaptiv-value('flex-basis', 60, 40, 1);
  @include adaptiv-value('height', 60, 40, 1);
  @media (max-width: 700px) {
    margin-right: 0;
  }
  img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}
.logo_link {
  display: block;
}
.menu {
  flex: 1 1 auto;
  &_body {
    @media (max-width: 700px) {
      position: fixed;
      top: -100%;
      right: 0;
      left: 0;
      z-index: 102;
      display: block;
      width: 100%;
      height: 100%;
      padding: 120px 15px 30px;
      overflow: auto;
      background-color: rgba(#000, 0.9);
      transition: top 0.6s ease 0s;
      &.active {
        top: 0;
        &::before {
          top: 0;
        }
      }
      &::before {
        position: fixed;
        top: -100%;
        left: 0;
        z-index: 101;
        width: 100%;
        content: '';
        background-color: #000;
        transition: top 0.5s ease 0s;
        @include adaptiv-value('height', 120, 70, 1);
      }
    }
  }
}
.list {
  display: flex;
  align-items: center;
  @media (max-width: 700px) {
    display: block;
    text-align: center;
  }
}
.item {
  &:not(:last-child) {
    margin: 0px 20px 0px 0px;
    @media (max-width: 700px) {
      & {
        margin: 0px 0px 25px 0px;
      }
    }
  }
}
.link {
  min-width: 70px;
  padding: 8px 10px;
  font-size: 16px;
  font-weight: 600;
  color: #fff;
  text-align: center;
  text-shadow: 0 0 2px #fff, 0 0 10px #ff0;
  border: 2px solid transparent;
  border-radius: 3px;
  transition: border-color 0.4s ease 0s, color 0.4s ease 0s,
    text-shadow 0.4s ease 0s;
  &_active {
    color: #ae72c2;
    text-shadow: none;
    border-color: #ae72c2;
  }
  @media (hover: hover) {
    &:hover {
      color: #ae72c2;
      text-shadow: none;
      border-color: #ae72c2;
    }
  }
}
.icon_menu {
  display: none;
  @media (max-width: 700px) {
    position: relative;
    z-index: 102;
    display: inline-flex;
    flex: 0 0 30px;
    height: 18px;
    margin: 0px 0px 0px 20px;
    span {
      position: absolute;
      top: calc(50% - 1px);
      left: 0;
      width: 100%;
      height: 2px;
      background-color: #fff;
      transition: all 0.3s ease 0s;
      &:first-child {
        top: 0;
      }
      &:last-child {
        top: auto;
        bottom: 0;
      }
    }
    &.active {
      span {
        transform: scale(0);
        &:first-child {
          top: calc(50% - 1px);
          transform: rotate(-45deg);
        }
        &:last-child {
          bottom: calc(50% - 1px);
          transform: rotate(45deg);
        }
      }
    }
  }
}
.favorites {
  position: relative;
  flex-grow: 0;
  flex-shrink: 0;
  @include adaptiv-value('flex-basis', 35, 30, 1);
  @include adaptiv-value('height', 35, 30, 1);
}
.go_to_favorites {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  span {
    position: absolute;
    top: -5px;
    right: -5px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 21px;
    height: 21px;
    font-size: 13px;
    font-weight: 600;
    color: #000;
    background-color: #fff;
    border-radius: 50%;
    transition: color 0.2s ease 0s;
  }
  svg {
    width: 100%;
    height: 100%;
    fill: #f75d83;
    transition: fill 0.3s ease 0s;
  }
  @media (hover: hover) {
    &:hover {
      span {
        color: #f52c5e;
      }
      svg {
        fill: #f52c5e;
      }
    }
  }
}

// CONTENT_WRAPPER
.content_wrapper {
  padding-top: 25px;
  @include adaptiv-value('padding-bottom', 50, 25, 1);
}
/* ... */

